# Agentic-AI

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260401_0001_initial_schema.py
src/agent/: configuration.py  graph.py  settings.py  state.py
src/agent/api/: app.py  dependencies.py  middleware.py  schemas.py
src/agent/api/routers/: health.py  threads.py
src/agent/cache/: __init__.py  redis_client.py
src/agent/db/: base.py  engine.py  models.py  repositories.py
